Fixed bug that caused overflow in Y direction. Content alignment changed to top and, in case of overflow, the flexbox becomes scrollable to accomodate all tags. Updated personal project.

--- a/2019/_sass/_includes/_listing.scss
+++ b/2019/_sass/_includes/_listing.scss
@@ -63,6 +63,7 @@
 	padding: 17px 20px;
 	background: rgba($overlay-background-color, $overlay-opacity);
 
+	overflow-y: scroll;
 	opacity: 0;
 	visibility: hidden;
 	@include transition(all 0.3s ease-in-out);
