--- a/2019/css/style.scss
+++ b/2019/css/style.scss
@@ -330,3 +330,7 @@ $grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;
     width: 100%;
     height: 100%;
 }
+
+.listing-item__content {
+    overflow-y: auto;
+}
